--- a/content/projects/hype.mdx
+++ b/content/projects/hype.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Hype — Event Discovery App"
-description: "Mobile application for discovering local events with real-time recommendations and social features"
-date: "2025-06-01"
+title: "Hype"
+description: "Application mobile de découverte d'événements locaux avec recommandations personnalisées"
+date: "2026-01-25"
 category: "travail"
 tags: ["TypeScript", "React Native", "Next.js", "PostgreSQL", "Mobile"]
 featured: false
@@ -10,58 +10,40 @@ thumbnail: "/images/projects/hype-thumb.jpg"
 gallery: []
 ---
 
-# Hype — Event Discovery App
+# Hype
 
-🔒 **Private Repository** — Startup Project
+Repo privé — Projet startup
 
-A mobile-first application helping users discover events and experiences happening around them.
+Application mobile pour découvrir les événements et expériences autour de soi.
 
-## 🎯 Context
+## Contexte
 
-| | |
-|---|---|
-| **Duration** | Ongoing |
-| **Team** | Startup project |
-| **Role** | Full-stack Developer |
-| **Status** | 🟡 MVP Phase |
+Projet startup démarré en juin 2025. Rôle : Full-stack Developer. Phase MVP.
 
-Hype aims to solve the problem of event discovery — finding things to do shouldn't require checking 10 different apps and websites.
+Problème : trouver des trucs à faire ne devrait pas nécessiter de checker 10 apps différentes.
 
-## 💻 Tech Stack
+## Stack
 
-| Category | Technologies |
-|----------|--------------|
-| Mobile | React Native, Expo |
-| Web | Next.js, TypeScript |
-| Backend | REST API |
-| Database | PostgreSQL |
-| Architecture | Monorepo (pnpm) |
+- React Native, Expo (mobile)
+- Next.js, TypeScript (web admin)
+- REST API (backend)
+- PostgreSQL
+- Monorepo pnpm
 
-## 🚀 Key Features
+## Fonctionnalités
 
-- **Smart Discovery**: Personalized event recommendations based on preferences and location
-- **Real-time Updates**: Live event information and availability
-- **Social Integration**: See what friends are interested in
-- **Cross-platform**: Native mobile apps for iOS and Android
-- **Web Dashboard**: Admin interface for event organizers
+- Découverte intelligente basée sur préférences et localisation
+- Mises à jour temps réel des événements
+- Intégration sociale : voir les intérêts des amis
+- Cross-platform : iOS et Android natifs
+- Dashboard web pour les organisateurs
 
-## 🔧 Technical Highlights
+## Points Techniques
 
-### Monorepo Architecture
+Architecture monorepo avec pnpm, partage de code entre app mobile, dashboard web et backend. Cohérence garantie, duplication minimale.
 
-The project uses a pnpm monorepo structure sharing code between the mobile app, web dashboard, and backend services. This ensures consistency and reduces duplication.
+Services de géolocalisation pour le moteur de découverte, événements pertinents selon proximité et préférences de déplacement.
 
-### Location-based Features
+## Liens
 
-Geolocation services power the discovery engine, providing relevant events based on user proximity and travel preferences.
-
-## 🎓 Learning Outcomes
-
-- React Native development at scale
-- Monorepo management with pnpm
-- Location-based service implementation
-- Startup MVP development practices
-
-## 🔗 Links
-
-🔒 Repository is private — Startup project in development
+Repo privé — Projet startup en développement
