--- a/content/projects/llm-automation.mdx
+++ b/content/projects/llm-automation.mdx
@@ -1,7 +1,7 @@
 ---
 title: "LLM Automation Platform"
-description: "Enterprise SaaS platform for building AI-powered automation workflows with multi-provider LLM support"
-date: "2025-09-01"
+description: "Plateforme SaaS pour créer des workflows d'automatisation IA avec support multi-providers"
+date: "2026-02-01"
 category: "travail"
 tags: ["Python", "FastAPI", "LangGraph", "TypeScript", "PostgreSQL", "AI"]
 featured: true
@@ -12,64 +12,40 @@ gallery: []
 
 # LLM Automation Platform
 
-🔒 **Private Repository** — Professional Project
+Repo privé — Projet professionnel
 
-A comprehensive SaaS platform enabling businesses to create AI-powered automation workflows without writing code.
+Plateforme SaaS permettant de créer des workflows d'automatisation alimentés par des LLM, sans écrire de code.
 
-## 🎯 Context
+## Contexte
 
-| | |
-|---|---|
-| **Duration** | Ongoing (6+ months) |
-| **Team** | Professional project |
-| **Role** | Lead Developer |
-| **Status** | 🟡 Active Development |
+Projet professionnel démarré en septembre 2025. Rôle : Lead Developer. Équipe restreinte.
 
-This platform allows non-technical users to build complex automation workflows powered by large language models, with enterprise-grade reliability and security.
+La plateforme permet à des utilisateurs non-techniques de construire des workflows d'automatisation complexes avec des LLM, avec fiabilité et sécurité enterprise.
 
-## 💻 Tech Stack
+## Stack
 
-| Category | Technologies |
-|----------|--------------|
-| Backend | Python 3.11+, FastAPI |
-| AI/ML | LangGraph, LangChain |
-| Frontend | TypeScript, React |
-| Database | PostgreSQL |
-| Infrastructure | Docker, Redis |
+- Python 3.11+, FastAPI (backend)
+- LangGraph, LangChain (orchestration IA)
+- TypeScript, React (frontend)
+- PostgreSQL
+- Docker, Redis (infra)
 
-## 🚀 Key Features
+## Fonctionnalités
 
-- **Multi-Provider Support**: Claude, OpenAI, and Ollama (local) models
-- **Visual Workflow Builder**: Drag-and-drop interface for creating automation flows
-- **RAG Integration**: Connect to custom knowledge bases for context-aware responses
-- **Plugin System**: Extensible architecture for custom integrations
-- **Enterprise Security**: Role-based access control, audit logging
+- Support multi-providers : Claude, OpenAI, Ollama (local)
+- Builder visuel de workflows drag-and-drop
+- Intégration RAG pour bases de connaissances custom
+- Système de plugins extensible
+- Sécurité enterprise : RBAC, audit logs
 
-## 📊 Project Metrics
+## Points Techniques
 
-| Metric | Value |
-|--------|-------|
-| Test Coverage | 77% |
-| Total Tests | 1,296 |
-| Architecture | Enterprise-grade |
+Architecture agents avec LangGraph pour des workflows stateful multi-étapes. Chaque agent peut utiliser des outils, maintenir un contexte de conversation et gérer des arbres de décision complexes.
 
-## 🔧 Technical Highlights
+Abstraction multi-providers : interface unifiée permettant de switcher entre Claude, GPT-4 et modèles Ollama locaux selon les besoins.
 
-### Agent Architecture
+Métriques : 77% de couverture de tests, 1296 tests.
 
-The platform uses LangGraph for building stateful, multi-step agent workflows. Each agent can use tools, maintain conversation context, and handle complex decision trees.
+## Liens
 
-### Multi-Provider Abstraction
-
-A unified interface abstracts away provider differences, allowing seamless switching between Claude, GPT-4, and local Ollama models based on use case requirements.
-
-## 🎓 Learning Outcomes
-
-- Large-scale Python application architecture
-- LLM orchestration and agent design patterns
-- Enterprise SaaS development practices
-- Test-driven development at scale
-
-## 🔗 Links
-
-🔒 Repository is private — Professional project under NDA
+Repo privé — Projet sous NDA
