--- a/content/projects/process-tracker.mdx
+++ b/content/projects/process-tracker.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Process Tracker"
-description: "Desktop application to manage local development services with health checks and dependency management"
-date: "2025-12-17"
+description: "Application desktop pour gérer les services de développement local"
+date: "2026-01-10"
 category: "perso"
 tags: ["Tauri", "Rust", "React", "DevTools", "Cross-platform"]
 featured: false
-status: "terminé"
+status: "stable"
 github: "https://github.com/Kikii95/process-tracker"
 thumbnail: "/images/projects/process-tracker-thumb.jpg"
 gallery: []
@@ -13,60 +13,37 @@ gallery: []
 
 # Process Tracker
 
-Desktop application to manage local development services. No more duplicate processes, port conflicts, or guessing what's running.
+Application desktop pour gérer les services de développement local. Fini les processus dupliqués, conflits de ports et incertitudes sur ce qui tourne.
 
-## 🎯 Context
+## Contexte
 
-| | |
-|---|---|
-| **Duration** | 1 week |
-| **Team** | Solo |
-| **Status** | 🟢 Complete |
+Projet perso démarré en décembre 2025. Développé en solo sur une semaine.
 
-When developing with multiple services (backend, frontend, database), you often face duplicate processes, port conflicts, and no visibility into what's running. This tool solves all of that.
+Problème résolu : quand on développe avec plusieurs services (backend, frontend, database), on se retrouve souvent avec des processus dupliqués, des conflits de ports, et aucune visibilité sur ce qui tourne.
 
-## 💻 Tech Stack
+## Stack
 
-| Category | Technologies |
-|----------|--------------|
-| Framework | Tauri 2.0 |
-| Backend | Rust |
-| Frontend | React, TypeScript |
-| Platform | Windows, Linux |
+- Tauri 2.0
+- Rust (backend)
+- React, TypeScript (frontend)
+- Cross-platform : Windows, Linux
 
-## 🚀 Key Features
+## Fonctionnalités
 
-- **Start/Stop/Restart**: Manage services with one click
-- **Status Dashboard**: See all services at a glance
-- **Health Checks**: HTTP endpoint monitoring
-- **Dependencies**: Start services in the correct order
-- **History Tracking**: See what ran and when
-- **WSL Support**: Manage WSL projects from Windows
+- Start/Stop/Restart des services en un clic
+- Dashboard de statut global
+- Health checks HTTP
+- Gestion des dépendances entre services
+- Historique des exécutions
+- Support WSL depuis Windows
 
-## 🔧 Technical Highlights
+## Points Techniques
 
-### Service Management
+Les services sont définis dans un fichier YAML simple. Le tracker surveille l'état des processus, gère l'arrêt propre et peut redémarrer automatiquement les services crashés.
 
-Services are defined in a simple YAML config. The tracker monitors process state, handles graceful shutdown, and can restart crashed services automatically.
+Intégration WSL : peut exécuter des commandes dans les distributions WSL, permettant de gérer des services Linux depuis une GUI Windows.
 
-### WSL Integration
+## Liens
 
-The tracker can execute commands in WSL distributions, allowing you to manage Linux-based development services from a Windows GUI.
-
-## 📥 Installation
-
-Download from [Releases](https://github.com/Kikii95/process-tracker/releases):
-- Windows: `.exe` installer
-- Linux: `.AppImage` or `.deb` package
-
-## 🎓 Learning Outcomes
-
-- Tauri 2.0 development
-- Process management in Rust
-- Cross-platform desktop app distribution
-- WSL interop from native Windows apps
-
-## 🔗 Links
-
-- [GitHub Repository](https://github.com/Kikii95/process-tracker)
-- Pre-built installers in Releases
+- [GitHub](https://github.com/Kikii95/process-tracker)
+- Installeurs dans les Releases (.exe, .AppImage, .deb)
